[tool.poetry]
name = "r-kafka-client"
version = "0.1.0"
description = ""
authors = ["Till Bethge <till.bethge@inwt-statistics.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
